...
                        ),
                      ),
                      const Spacer(
                        flex: 6,
                      ),
                      InkWell(
                        key: const Key("sign_in_button"),
                        customBorder: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(20)),
                        onTap: () async {
                          setState(() {
                            loading = true;
                          });
...
