...
            validator: (value) {
              if (double.tryParse(widget.weightcontroller.text) == null) {
                return "Enter valid value";
              }
              return null;
            },
            key: const Key("weight_text_field"),
            controller: widget.weightcontroller,
            keyboardType: const TextInputType.numberWithOptions(decimal: true),
            decoration: const InputDecoration(
              border: OutlineInputBorder(),
              hintText: "Weight",
              suffixIcon: Padding(
...
